# audiodecoder.stsound

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  azure-pipelines.yml
.github/workflows/: build.yml  increment-version.yml  sync-addon-metadata-translations.yml
audiodecoder.stsound/: addon.xml  addon.xml.in
audiodecoder.stsound/resources/language/resource.language.ca_es/: strings.po
audiodecoder.stsound/resources/language/resource.language.da_dk/: strings.po
audiodecoder.stsound/resources/language/resource.language.de_de/: strings.po
audiodecoder.stsound/resources/language/resource.language.en_gb/: strings.po
audiodecoder.stsound/resources/language/resource.language.es_es/: strings.po
audiodecoder.stsound/resources/language/resource.language.es_mx/: strings.po
audiodecoder.stsound/resources/language/resource.language.et_ee/: strings.po
audiodecoder.stsound/resources/language/resource.language.fr_fr/: strings.po
audiodecoder.stsound/resources/language/resource.language.hr_hr/: strings.po
audiodecoder.stsound/resources/language/resource.language.it_it/: strings.po
audiodecoder.stsound/resources/language/resource.language.ko_kr/: strings.po
audiodecoder.stsound/resources/language/resource.language.ru_ru/: strings.po
audiodecoder.stsound/resources/language/resource.language.zh_cn/: strings.po
audiodecoder.ym/: addon.xml
debian/: changelog.in  control  copyright  rules
lib/: kodi-stsound-note.txt
lib/stsound/StSoundLibrary/: YmTypes.h  YmUserInterface.cpp  Ymload.cpp
lib/stsound/StSoundLibrary/LZH/: lzhxlib.c
src/: YMCodec.cpp  YMCodec.h
